src/main/java/com/example/coupon/domain/errors/NotExistsCouponTopic.java
package com.example.coupon.domain.errors;

public class NotExistsCouponTopic extends RuntimeException{
}
